# Custom-Note-Builder

./: Cargo.toml  readme.md
bootloader/mbr/: CustomMBR.asm
src/: color.rs  main.rs  payload.rs
ui/: app.slint
