[package]
name = "bootloader_custom_builder-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "1.1.0", features = ["backend-winit-x11"] }
windows = { version = "0.48.0", features = [
    "Win32_UI_Controls_Dialogs",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
slint-build = "1.1"
